--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>You are feeling SUS !</h1>
   <img src="https://styles.redditmedia.com/t5_3jr362/styles/communityIcon_mah57qwr6xw61.png?width=256&s=cb2b7984bb48d482e9f7d0226223712890c4c88e"/>
-<audio src="/Amogus/amogus.m4a" controls>
+<audio src="/Amogus/amogus.mp3" controls>
 Error: your web browser is SUS !.
 </audio> 
 </audio>
