--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 <body>
   <h1>You are feeling SUS !</h1>
-  <img src="Amogus/amogus.jpg" alt="Amogus" class="center">
+  <img src="Amogus/amogus.png" alt="Amogus" class="center">
 <audio autoplay> 
 <source src="/Amogus/amogus.mp3">
 Error: your web browser is SUS !.
