--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <img src="Amogus/amogus.png" alt="Amogus" class="center">
 <audio autoplay> 
 <source src="/Amogus/amogus.mp3">
-Error: your web browser is SUS !.
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 </audio> 
   </body>
 </html>
