--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>Amogus</title>
+ <style>
+      .img-container {
+        text-align: center;
+      }
+    </style>
   </head>
 <body>
   <h1>You are feeling SUS !</h1>
-  <img src="Amogus/amogus.png" alt="Amogus" class="center">
+<div class="img-container">
+      <img src="/Amogus/amogus.png" alt="Amogus">
+    </div>
+
 <audio autoplay> 
 <source src="/Amogus/amogus.mp3">
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
 </audio> 
   </body>
 </html>
