--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Amogus</title>
  <style>
       .img-container {
         text-align: center;
@@ -13,9 +12,10 @@
   <h1>You are feeling SUS !</h1>
 <div class="img-container">
       <img src="/Amogus/amogus.png" alt="Amogus">
+      <title>Amogus</title>
     </div>
 
-<audio autoplay> 
+<audio autoplay loop> 
 <source src="/Amogus/amogus.mp3">
 </audio> 
   </body>
