--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+body { background-image:url('/Amogus/Rainbow.gif'); background-repeat:repeat; }
 <title>Amogus</title>
  <style>
       .img-container {
