--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-<img src='/Amogus/Rainbow.gif' id='selector'/>
+body {
+    background:url('/Amogus/Rainbow.gif') repeat-y 100% 100% fixed;
+    height:100%;
+    width:100%;
+}
 <title>Amogus</title>
  <style>
       .img-container {
