--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-body {
-    background:url('/Amogus/Rainbow.gif') repeat-y 100% 100% fixed;
-    height:100%;
-    width:100%;
-}
+<link rel="stylesheet" href="Rainbow.css"/>
 <title>Amogus</title>
  <style>
       .img-container {
