--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-<link rel="stylesheet" href="Rainbow.css"/>
+<link rel="stylesheet" href="Rainbow.css">
 <title>Amogus</title>
  <style>
       .img-container {
