--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="Rainbow.css">
   <meta charset="utf-8">
 <title>Amogus</title>
+<font color="white"> 
  <style>
       .img-container {
         text-align: center;
@@ -21,3 +22,5 @@
 </audio> 
   </body>
 </html>
+
+#You are a sussy imposter ! I'm gonna vore you *nom*.
