--- a/index.html
+++ b/index.html
@@ -23,4 +23,4 @@
   </body>
 </html>
 
-##You are a sussy imposter ! I'm gonna vore you *nom*.
+<!--You are a sussy imposter ! I'm gonna vore you *nom*.--!>
