--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <link rel="stylesheet" href="Rainbow.css">
   <meta charset="utf-8">
+<meta name="description" content="You are feeling SUS !" />
 <meta property="og:title" content="Amogus" />
+<meta property="og:type" content="article" />
 <meta property="og:description" content="You are feeling SUS !" />
 <meta property="og:url" content="https://darkbloodking00.github.io/" />
 <meta property="og:site_name" content="Amogus" />
