--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:description" content="You are feeling SUS !" />
 <meta property="og:url" content="https://darkbloodking00.github.io/" />
 <meta property="og:site_name" content="Amogus" />
-<meta property="og:image" content="view-source:https://darkbloodking00.github.io/Amogus/amogus.png" />
+<meta property="og:image" content="https://darkbloodking00.github.io/Amogus/amogus.png" />
 <meta property="og:image:width" content="1280" />
 <meta property="og:image:height" content="720" />
 
