--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="Rainbow.css">
   <meta charset="utf-8">
+<meta name="theme-color" content="#ffffff">
 <meta name="description" content="You are feeling SUS !" />
 <meta property="og:title" content="Amogus" />
 <meta property="og:type" content="article" />
