--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <title>Dark Kişisel Websitesi...Sanırım ? />
   </head>
 <body>
-<h1> Dark kim ? />
-<p> Zor soru, pass />
+<h1> Dark kim ? </h1>
+<p> Zor soru, pass </p>
   </body>
 </html>
