--- a/home.html
+++ b/home.html
@@ -1,10 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Dark Kişisel Websitesi...Sanırım ? />
+<title>Dark Kişisel Websitesi...Sanırım ? </title>
   </head>
 <body>
 <h1>Dark kim ?</h1>
-<p>Zor soru, pass</p>
+<p>Zor soru, pass.</p>
+<h1>Wanna see my fursona, eh ?</h1>
+<img src="/Dark/white.png" width="1080" height="1920" />
+<p>(This work is licensed under a https://creativecommons.org/licenses/by-sa/4.0/ Creative Commons Attribution-ShareAlike 4.0 International License [/url] </p>
   </body>
 </html>
