--- a/home.html
+++ b/home.html
@@ -8,6 +8,6 @@
 <p>Zor soru, pass.</p>
 <h1>Wanna see my fursona, eh ?</h1>
 <img src="/Dark/white.png" width="1080" height="1920" />
-<p>(This work is licensed under a https://creativecommons.org/licenses/by-sa/4.0/ Creative Commons Attribution-ShareAlike 4.0 International License [/url] </p>
+<p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> </p>
   </body>
 </html>
