--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 <audio autoplay loop> 
 <source src="/Amogus/amogus.mp3">
 </audio> 
+<button onclick="window.location.href='https://darkbloodking00.github.io/home.html';">
+      Dark Kim ?
+    </button>
   </body>
 </html>
 
