Discord linkleri eklendi

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 <button onclick="window.location.href='https://darkbloodking00.github.io/proce.html';">
       Bulunduğum Projeler
     </button>
+<button onclick="window.location.href='https://darkbloodking00.github.io/discord.html';">
+      Discord Sunucuları
+    </button>
   </body>
 </html>
 
