--- a/proce.html
+++ b/proce.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Dark Kişisel Websitesi...Sanırım ? </title>
+<button onclick="window.location.href='https://darkbloodking00.github.io/index.html';">
+      Ana Sayfaya Geri Dön
+    </button>
   </head>
 <body>
 <h1>Bulunduğum projeler neler ?</h1>
