Furry statistics eklendi

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 <button onclick="window.location.href='https://darkbloodking00.github.io/discord.html';">
       Discord Sunucuları
     </button>
+<button onclick="window.location.href='https://darkbloodking00.github.io/furrystatistics.html';">
+      Furry Statistics
+    </button
   </body>
 </html>
 
