Yazım hatası giderildi

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </button>
 <button onclick="window.location.href='https://darkbloodking00.github.io/furrystatistics.html';">
       Furry Statistics
-    </button
+    </button>
   </body>
 </html>
 
