--- a/furrystatistics.html
+++ b/furrystatistics.html
@@ -12,7 +12,7 @@
 <br><br>
 <p>Member Count - Türkiye Furry Topluluğu: 118</p>
 <p>Member Count - Dark Land: 23</p>
-
+(The numbers above can be verified by comparing it to the disboard statistics by excluding the bot count: <a href="https://disboard.org/search?keyword=furry+t%C3%BCrk"> Disboard </a> )
 <h2>Special Days</h2>
 
 <ul>
