Telegram Group Founding Day Added
//TR Telegram Grubu Kuruluş Tarihi Eklendi.

--- a/furrystatistics.html
+++ b/furrystatistics.html
@@ -11,12 +11,13 @@
 <p>(Note: The statistics information comes from verification based servers so it can't be obtained anonymously. The numbers below are gathered manually by me.)
 <br><br>
 <p>Member Count - Türkiye Furry Topluluğu: 118</p>
-<p>Member Count - Dark Land: 23</p>
+<p>Member Count - Dark Land: 24</p>
 (The numbers above can be verified by comparing it to the disboard statistics by excluding the bot count: <a href="https://disboard.org/search?keyword=furry+t%C3%BCrk"> Disboard </a> )
 <h2>Special Days</h2>
 
 <ul>
 <li>TrFurs Founded - 28 October 2010</li>
+<li>Tr Furries Telegram Group Founded - 07 May 2018</li>
 <li>Türkiye Furry Topluluğu Founded - 1 November 2020</li>
 <li>Dark Land Founded - 19 April 2021</li>
 </ul>
