--- a/proce.html
+++ b/proce.html
@@ -16,5 +16,9 @@
 <br><br>
 <a href="https://github.com/Kyrope/darkdeception"> Dark Deception Gayri Resmi Türkçe Yama </a>
 <p>(Not: Dark Deception'ın çevirisinde yalnızca teknik tarafla ilgilendim. Çeviri Kyrope'a aittir.)</p>
+<br><br>
+<a href="https://github.com/Darkbloodking00/NekojishiTurkceYama"> Nekojishi Gayri Resmi Türkçe Yama </a>
+<p>(Not: Yama henüz yapım aşamasındandır.)</p>
+
   </body>
 </html>
