--- a/furrystatistics.html
+++ b/furrystatistics.html
@@ -10,8 +10,8 @@
 <h1>Statistics:</h1>
 <p>(Note: The statistics information comes from verification based servers so it can't be obtained anonymously. The numbers below are gathered manually by me.)
 <br><br>
-<p>Member Count - Türkiye Furry Topluluğu: 138</p>
-<p>Member Count - Dark Land: 21</p>
+<p>Member Count - Türkiye Furry Topluluğu: 206</p>
+<p>Member Count - Dark Land: 28</p>
 (The numbers above can be verified by comparing it to the disboard statistics by excluding the bot count: <a href="https://disboard.org/search?keyword=furry+t%C3%BCrk"> Disboard </a> )
 <h2>Special Days</h2>
 
@@ -20,6 +20,8 @@
 <li>Tr Furries Telegram Group Founded - 07 May 2018</li>
 <li>Türkiye Furry Topluluğu Founded - 1 November 2020</li>
 <li>Dark Land Founded - 19 April 2021</li>
+<li>FurLoca Türkiye Founded - 20 August 2022</li>
+<li>End of Türkiye Furry Topluluğu (Archived) - 23 August 2022</li>
 </ul>
 
   </body>
