--- a/furrystatistics.html
+++ b/furrystatistics.html
@@ -21,7 +21,8 @@
 <li>Türkiye Furry Topluluğu Founded - 1 November 2020</li>
 <li>Dark Land Founded - 19 April 2021</li>
 <li>FurLoca Türkiye Founded - 20 August 2022</li>
-<li>End of Türkiye Furry Topluluğu (Archived) - 23 August 2022</li>
+<li>End of Türkiye Furry Topluluğu (Archived) - 24 August 2022</li>
+<li>Rebirth of Türkiye Furry Topluluğu Under a New Ownership of MarbleStarry - 25 August 2022</li>
 </ul>
 
   </body>
