--- a/furrystatistics.html
+++ b/furrystatistics.html
@@ -12,6 +12,7 @@
 <br><br>
 <p>Member Count - Türkiye Furry Topluluğu: 206</p>
 <p>Member Count - Dark Land: 28</p>
+<p>Member Count - FurLoca Türkiye: 61</p>
 (The numbers above can be verified by comparing it to the disboard statistics by excluding the bot count: <a href="https://disboard.org/search?keyword=furry+t%C3%BCrk"> Disboard </a> )
 <h2>Special Days</h2>
 
@@ -21,7 +22,7 @@
 <li>Türkiye Furry Topluluğu Founded - 1 November 2020</li>
 <li>Dark Land Founded - 19 April 2021</li>
 <li>FurLoca Türkiye Founded - 20 August 2022</li>
-<li>End of Türkiye Furry Topluluğu (Archived) - 24 August 2022</li>
+<li>End of Türkiye Furry Topluluğu (Archived) - 24 August 2022</li> - Member Count: 206
 <li>Rebirth of Türkiye Furry Topluluğu Under a New Ownership of MarbleStarry - 25 August 2022</li>
 </ul>
 
