--- a/furrystatistics.html
+++ b/furrystatistics.html
@@ -10,10 +10,10 @@
 <h1>Statistics:</h1>
 <p>(Note: The statistics information comes from verification based servers so it can't be obtained anonymously. The numbers below are gathered manually by me.)
 <br><br>
-<p>Member Count - Türkiye Furry Topluluğu: 206</p>
-<p>Member Count - Dark Land: 28</p>
-<p>Member Count - FurLoca Türkiye: 61</p>
-(The numbers above can be verified by comparing it to the disboard statistics by excluding the bot count: <a href="https://disboard.org/search?keyword=furry+t%C3%BCrk"> Disboard </a> )
+<p>Member Count - Türkiye Furry Topluluğu: 199</p>
+<p>Member Count - Dark Land: 29</p>
+<p>Member Count - FurLoca Türkiye: 70</p>
+(The numbers above can be verified by comparing it to the disboard statistics by excluding the bot count: <a href="https://disboard.org/servers/tag/furry?fl=tr"> Disboard </a> )
 <h2>Special Days</h2>
 
 <ul>
@@ -23,7 +23,7 @@
 <li>Dark Land Founded - 19 April 2021</li>
 <li>FurLoca Türkiye Founded - 20 August 2022</li>
 <li>End of Türkiye Furry Topluluğu (Archived) - 24 August 2022</li> - Member Count: 206
-<li>Rebirth of Türkiye Furry Topluluğu Under a New Ownership of MarbleStarry - 25 August 2022</li>
+<li>Rebirth of Türkiye Furry Topluluğu Under a New Ownership of <a href="https://www.furaffinity.net/user/marblestarry/"> MarbleStarry </a> - 25 August 2022</li>
 </ul>
 
   </body>
