--- a/furrystatistics.html
+++ b/furrystatistics.html
@@ -2,17 +2,22 @@
 <html>
 <head>
 <title>Dark Kişisel Websitesi...Sanırım ? </title>
+<link rel="stylesheet" href="nostyle.css">
 <button onclick="window.location.href='https://darkbloodking00.github.io/index.html';">
       Ana Sayfaya Geri Dön
     </button>
   </head>
 <body>
 <h1>Statistics:</h1>
+
+
 <p>(Note: The statistics information comes from verification based servers so it can't be obtained anonymously. The numbers below are gathered manually by me.)
 <br><br>
-<p>Member Count - Türkiye Furry Topluluğu: 199</p>
+<p>Member Count - Türkiye Furry Topluluğu: 202</p>
 <p>Member Count - Dark Land: 29</p>
 <p>Member Count - FurLoca Türkiye: 70</p>
+<p>Member Count - FurrLight: 124</p>
+
 (The numbers above can be verified by comparing it to the disboard statistics by excluding the bot count: <a href="https://disboard.org/servers/tag/furry?fl=tr"> Disboard </a> )
 <h2>Special Days</h2>
 
@@ -28,3 +33,4 @@
 
   </body>
 </html>
+
